...
    <string name="uid_error_join">Failed to join lobby.</string>
    <string name="host_name_format">Host: %s</string>
    <string name="game_name_format">Game: %s</string>
    <string name="playlist_format">Playlist: %s</string>
    <string name="number_of_rounds_format">Number of rounds: %d</string>
    <string name="hints_enabled_format">Hints enabled: %b</string>
    <string name="name_cannot_be_empty">Error : Song name cannot be empty !</string>
    <string name="playlist_is_empty">Error : Playlist does not contain any song !</string>
    <string name="playlist_has_no_name">Error : Playlist has no name !</string>
    <string name="private_format">Private : %b</string>
    <string name="playlist_card_text1">Playlist Name</string>
    <string name="playlist_card_text2">Playlist Genre</string>
    <string name="song_card_text1">Song Name</string>
    <string name="song_card_text2">Artist Name</string>
    <string name="playlist_name_placeholder">Playlist</string>
...
    <string name="sign_in_message">Sign in</string>
    <string name="sign_out_message">Sign out</string>
    <string name="swipe_a_song_to_delete">Swipe a song to delete it.</string>
    <string name="wait_for_pick_format">Waiting on %s to pick a song</string>
    <string name="congrats">Congratulations!</string>
    <string name="micPermissionError">The microphone permissions could not be updated.</string>
    <string name="saveOnlineQuestionText">Do you want to save your playlist online?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="round_done">The time of the round expired</string>
    <string name="warningMessageQuitAddPlaylist">Are you sure you want to return to the main menu? All unsaved changes will be discarded.</string>
    <string name="validateMessageQuitAddPlaylist">Return to your profile</string>
    <string name="cancelMessageQuitAddPlaylist">Continue editing my playlist</string>
...
            >"Nice try bud, you're staying here."</item>
        <item
            >"I doubt you really want to leave."</item>
        <item
            >"Quitting is for losers, we don't do that here."</item>
    </string-array>
    <string name="deleteUndoQuestion">Undo deletion?</string>
    <string name="deleteUndoAnswer">Undo</string>
    <string name="offline_error_message_toast">Cannot access online resources offline</string>
    <string name="no_lyrics_generation_offline">Couldn\'t generate lyrics</string>
    <string name="guest_cannot_save_online">You have to be signed in to Google to save a playlist online</string>
</resources>

