...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/warningQuitAddPlaylist"
        style="@style/Text.Popup"
        android:text="@string/warningMessageQuitAddPlaylist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

...
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warningQuitAddPlaylist">

        <Button
            android:id="@+id/validateQuitAddPlaylist"
            style="@style/GradientButton.Popup"
            android:layout_height="wrap_content"
            android:text="@string/validateMessageQuitAddPlaylist" />

        <Button
            android:id="@+id/cancelQuitAddPlaylist"
            style="@style/GradientButton.Popup"
            android:text="@string/cancelMessageQuitAddPlaylist" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
