...
        <Button
            android:id="@+id/saveOnlinePlaylistYes"
            style="@style/GradientButton.Popup"
            android:text="@string/yes" />

        <Button
            android:id="@+id/saveOnlinePlaylistNo"
            style="@style/GradientButton.Popup"
            android:text="@string/no" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
